# pre-commit

./: .pre-commit-hooks.yaml  pyproject.toml
pre_commit_hook/: pre_commit.py
